--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,9 @@ h2{
     font-size: 30px;
     color: rgb(255, 154, 22);
 }
+embed:hover{
+  color: rgb(255, 154, 22);
+}
 .comprovacion{
     position: absolute;
     left: 0.5cm;
@@ -141,7 +144,7 @@ h2{
 a:link{
     text-decoration: none;
     color: rgb(255, 154, 22);
-    font-size: +16px;
+    font-size: +14px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
