--- a/css/index.css
+++ b/css/index.css
@@ -15,13 +15,12 @@ h2{
     top: 0.8cm;
     left: 0.5cm;
 }.banner{
-    position: absolute;
+    float: right;
     border: 1px solid;
     background-color: rgb(17, 17, 17);
-    width: 18%;
+    width: 16%;
     height: 602px;
-    left: 40.6cm;
-    top: 3.5cm;
+    
 }
 .o2{
     position: relative;
@@ -30,7 +29,7 @@ h2{
 .arriba{
     border: solid;
     background-color: black;
-    width: 99.7%;
+    width: 100%;
     height: 120px;
 }
 .derecha{
@@ -38,13 +37,12 @@ h2{
     border: 0.1px solid ;
     background-color: rgb(17, 17, 17);
     width: 20%;
-    height: 645px;
 }
 .pie-pagina{
     float: left;
     border: solid;
     background-color: black;
-    width: 99.7%;
+    width: 100%;
     height: 215px;
 }
 .pie{
@@ -178,14 +176,13 @@ a:visited{
 
 body {
     text-align: center;
-    background-color: #1d1f20;
+    background-color: #18191a;
   }
   
   .wrapper {
     position: absolute;
-    top: 50%;
+    top: 10cm;
     left: 50%;
-    width: 90%;
     font-size: 0;
     -webkit-transform: translate(-50%);
             transform: translate(-50%);
@@ -202,7 +199,7 @@ body {
   .letter {
     width: 24px;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: center;
     position: relative;
     overflow: hidden;
     margin: 0 0;
@@ -211,13 +208,12 @@ body {
     font-weight: 600;
     line-height: 24px;
     text-transform: uppercase;
-    color: #eee;
+    color:  rgb(255, 154, 22);
   }
   .letter:before {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
     word-break: break-all;
     background-color: #1d1f20;
   }
