--- a/paginasweb/pagina_per_parts/miestilo.css
+++ b/paginasweb/pagina_per_parts/miestilo.css
@@ -63,3 +63,147 @@ nav a:hover{
     border-top: 3px solid #760001;
 
 }
+
+#banner_image{
+    background: url(../Imatges/sanfrancisco.jpg) repeat-x;
+    margin-top: 5px;
+    height: 200px; 
+    position: relative;
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 25px;
+    box-shadow: 0px 4px 4px orange;
+    color: purple;
+}
+
+#banner_description{
+    position: absolute;
+    border-radius: 0px 0px 5px 5px;
+    width: 99.5%;
+    height: 33px;
+    padding-top: 15px;
+    padding-left: 4px;
+    color: white;
+    font-size: 0.8em;
+    background-color: rgba(24,24,0,0.8);
+    bottom: 1px;
+}
+
+.red_button{
+    display: inline-block;
+    height: 25px;
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+    background: url('../Imatges/red_background.png') repeat-x;
+    border: 1px solid #760001;
+    border-radius: 5px;
+    font-size: 1.2em;
+    text-align: center;
+    padding: 3px 8px 0px 8px;
+    color: white;
+    text-decoration: none;
+}
+/* part 4*/
+
+article, aside{
+    text-align: justify;
+    vertical-align: top;
+    display: inline-block;
+}
+
+article{
+    width: 625px;
+    margin-right: 8px;
+}
+
+.ico_categorie{
+   margin-right: 8px;
+   vertical-align: middle; 
+} 
+
+
+article p{
+    font-size: 0.8em;
+}
+
+
+aside{
+    width: 235px;
+    background-color: gray;
+    box-shadow: 0px 2px 5px gray;
+    border-radius: 5px;
+    padding: 10px;
+    color: white;
+    font-size: 0.9em;
+}
+
+aside h1{
+    display: inline-block;
+}
+
+#arrow{
+    top: 25px;
+    left: 250px;
+}
+
+#autor{
+    text-align: center;
+    border: 1px solid #181818;
+}
+
+aside img{
+    margin-right: 5px;
+}
+
+/* part 5*/
+
+#tweet, #my_pictures, #my_friends{
+    vertical-align: top;
+    display: inline-block;
+}
+
+#tweet{
+    width: 28%;
+}
+
+#my_pictures{
+    width: 35%;
+}
+
+#my_friends{
+    width: 31%;
+}
+
+#my_pictures img{
+    border: 1px solid black;
+    margin-right: 2px;
+}
+
+#my_friends ul{
+    vertical-align: top;
+    display: inline-block;
+    margin-top: 0px;
+    width: 30%;
+    padding-right: 2px;
+    list-style-image: url('../Imatges/external_link.png');
+}
+
+#my_friends a{
+    text-decoration: none;
+    color: #760001;
+}
+
+footer{
+    background: url('../Imatges/top.png') no-repeat top center, url('../Imatges/line.png') repeat-x top, url('../Imatges/shadow.png') repeat-x top;
+    padding-top: 25px;
+}
+
+footer p, footer ul{
+    font-size: 0.8em;
+}
+
+footer h1{
+    font-size: 1.1em;
+}
+
