--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,36 @@
+
 h1{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     position: absolute;
     left: 4.5cm;
-    top: -0.4cm;
+    top: 0.75cm;
     font-size: 1.8cm;  
 }
+.layer1 {
+  height: 520px;
+  overflow:auto;
+  box-sizing: border-box;
+ 
+}
+
+.layer1::-webkit-scrollbar {
+  -webkit-appearance: unset;
+}
+
+.layer1::-webkit-scrollbar:vertical {
+  width:10px;
+}
+
+.layer1::-webkit-scrollbar-button:increment,.layer1::-webkit-scrollbar-button {
+  display: none;
+} 
+
+.layer1::-webkit-scrollbar:horizontal {
+  height: 10px;
+}
+
+
 h2{
     text-align: center;
 }
@@ -16,7 +41,7 @@ h2{
     left: 0.5cm;
 }.banner{
     float: right;
-    border: 1px solid;
+    border: 2px solid rgb(17, 17, 17);
     background-color: rgb(17, 17, 17);
     width: 16%;
     height: 610px;
@@ -31,21 +56,24 @@ h2{
     left: 2cm;
 }
 .arriba{
-    border: solid;
+    border: solid rgb(17, 17, 17);
     background-color: black;
     width: 100%;
     height: 120px;
 }
 .derecha{
+  color: rgb(255, 154, 22);
     float: left;
-    border: 0.1px solid ;
+    border: 0.1px solid rgb(17, 17, 17);
     background-color: rgb(17, 17, 17);
     width: 20%;
     height: 609px;
 }
+
+
 .pie-pagina{
     float: left;
-    border: solid;
+    border: solid rgb(17, 17, 17);
     background-color: black;
     width: 100%;
     height: 215px;
@@ -59,11 +87,11 @@ embed:hover{
 }
 .comprovacion{
     position: absolute;
-    left: 0.5cm;
+    left: 41cm;
     top: 20cm;
     opacity: 0.5;
 }
-.cuadro1{
+.cuadro{
     padding: 10px;
     margin-top: 0.2cm;
     margin-left: 1cm;
@@ -71,105 +99,24 @@ embed:hover{
     border: 1px solid rgb(27, 27, 27);  
     background-color: black;
     width: 75%;
+    transition: all 0.3s ease;
 }
-.cuadro2{
-    padding: 10px;
-    margin-top: 0.2cm;
-    margin-left: 1cm;
-    margin-right: 1cm;
-    border: 1px solid rgb(27, 27, 27);  
-    background-color: black;
-    width: 75%;
+
+.cuadro:hover{
+  text-decoration-color: black;
+    background-color:  rgb(255, 154, 22);
+    -webkit-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  transform: scale(0.9);
 }
-.cuadro3{
-    padding: 10px;
-    margin-top: 0.2cm;
-    margin-left: 1cm;
-    margin-right: 1cm;
-    border: 1px solid rgb(27, 27, 27);  
-    background-color: black;
-    width: 75%;
-}
-.cuadro4{
-    padding: 10px;
-    margin-top: 0.2cm;
-    margin-left: 1cm;
-    margin-right: 1cm;
-    border: 1px solid rgb(27, 27, 27);  
-    background-color: black;
-    width: 75%;
-}
-.cuadro5{
-    padding: 10px;
-    margin-top: 0.2cm;
-    margin-left: 1cm;
-    margin-right: 1cm;
-    border: 1px solid rgb(27, 27, 27);  
-    background-color: black;
-    width: 75%;
-}
-.cuadro6{
-    padding: 10px;
-    margin-top: 0.2cm;
-    margin-left: 1cm;
-    margin-right: 1cm;
-    border: 1px solid rgb(27, 27, 27);  
-    background-color: black;
-    width: 75%;
-}
-.cuadro7{
-    padding: 10px;
-    margin-top: 0.2cm;
-    margin-left: 1cm;
-    margin-right: 1cm;
-    border: 1px solid rgb(27, 27, 27);  
-    background-color: black;
-    width: 75%;
-}
-.cuadro8{
-    padding: 10px;
-    margin-top: 0.2cm;
-    margin-left: 1cm;
-    margin-right: 1cm;
-    border: 1px solid rgb(27, 27, 27);  
-    background-color: black;
-    width: 75%;
-}
-.cuadro9{
-    padding: 10px;
-    margin-top: 0.2cm;
-    margin-left: 1cm;
-    margin-right: 1cm;
-    border: 1px solid rgb(27, 27, 27);  
-    background-color: black;
-    width: 75%;
-}
+
+
 a:link{
     text-decoration: none;
     color: rgb(255, 154, 22);
-    font-size: +14px;
+    font-size: +18px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-.cuadro1:hover{
-    background-color: rgba(65, 60, 53, 0.979); 
-}.cuadro2:hover{
-    background-color: rgba(65, 60, 53, 0.979); 
-}.cuadro3:hover{
-    background-color: rgba(65, 60, 53, 0.979); 
-}.cuadro4:hover{
-    background-color: rgba(65, 60, 53, 0.979); 
-}.cuadro5:hover{
-    background-color: rgba(65, 60, 53, 0.979); 
-}.cuadro6:hover{
-    background-color: rgba(65, 60, 53, 0.979); 
-}.cuadro7:hover{
-    background-color: rgba(65, 60, 53, 0.979); 
-}.cuadro8:hover{
-    background-color: rgba(65, 60, 53, 0.979); 
-}.cuadro9:hover{
-    background-color: rgba(65, 60, 53, 0.979); 
 }
 
 link:hover{
@@ -180,6 +127,7 @@ a:visited{
 }
 
 body {
+  scrollbar-color:rgb(207, 0, 0);
     text-align: center;
     background-color: #18191a;
   }
@@ -702,4 +650,146 @@ body {
     to {
       margin-top: 24px;
     }
+  }
+  body
+  {
+    margin: 0;
+    padding: 0;
+    
+    /* make it look decent enough */
+    background: #232323;
+    color: #cdcdcd;
+    font-family: "Avenir Next", "Avenir", sans-serif;
+  }
+  
+  #menuToggle
+  {
+    height: 200px;
+    display: block;
+    position: relative;
+    top: 40px;
+    left: 50px;
+    
+    z-index: 1;
+    
+    -webkit-user-select: none;
+    user-select: none;
+  }
+  
+  #menuToggle a
+  {
+    text-decoration: none;
+    color:  rgb(255, 154, 22);
+    
+    transition: color 0.3s ease;
+  }
+  
+  #menuToggle a:hover
+  {
+    color: black;
+  }
+  
+  
+  #menuToggle input
+  {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -61px;
+    left: -5px;
+    
+    cursor: pointer;
+    
+    opacity: 0; /* hide this */
+    z-index: 2; /* and place it over the hamburger */
+    
+    -webkit-touch-callout: none;
+  }
+  
+  /*
+   * Just a quick hamburger
+   */
+  #menuToggle span
+  {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    top: -60px;
+    left: -5px;
+    
+    background: #cdcdcd;
+    border-radius: 3px;
+    
+    z-index: 1;
+    
+    transform-origin: 4px 0px;
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
+  
+  #menuToggle span:first-child
+  {
+    transform-origin: 0% 0%;
+  }
+  
+  #menuToggle span:nth-last-child(2)
+  {
+    transform-origin: 0% 100%;
+  }
+  
+ 
+  #menuToggle input:checked ~ span
+  {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
+  
+  
+  #menuToggle input:checked ~ span:nth-last-child(3)
+  {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  
+  
+  #menuToggle input:checked ~ span:nth-last-child(2)
+  {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+  
+  
+  #menu
+  {
+    width: 300px;
+    margin: -100px 0 0 -50px;
+    padding: 1px;
+    padding-top: 100px;
+    
+    background: #181818;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+  
+    
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+  
+  #menu li
+  {
+  
+    font-size: 22px;
+  }
+  
+
+  #menuToggle input:checked ~ ul
+  {
+    transform: none;
   }
